changed ios release

--- a/web/index.html
+++ b/web/index.html
@@ -20,15 +20,14 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Elite Quiz">
-  <meta name="google-signin-client_id" content="322915959213-d59srtk19gfj4cepvlf2lcpbo45a00et.apps.googleusercontent.com">
-  
+  <meta name="apple-mobile-web-app-title" content="Nurse Values">
+  <meta name="google-signin-client_id" content="323371708222-klb0vai0bipovi91hj2d58f4bst3g8di.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Elite Quiz</title>
+  <title>Nurse Values</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
